Страница английский язык средняя школа 3

--- a/шаблон — направления-средняя-школа-английский-язык.html
+++ b/шаблон — направления-средняя-школа-английский-язык.html
@@ -497,7 +497,7 @@
 
 
                 <div class="uk-width-expand@m uk-margin">
-                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 41.png" alt=""
                         uk-scrollspy="cls: uk-animation-fade; delay: 600">
 
                 </div>
@@ -543,7 +543,7 @@
 
                 </div>
                 <div class="uk-width-expand@m   uk-margin">
-                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 44.png" alt=""
                         uk-scrollspy="cls: uk-animation-fade; delay: 600">
 
                 </div>
@@ -558,7 +558,7 @@
 
 
                 <div class="uk-width-expand@m uk-margin">
-                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 43.png" alt=""
                         uk-scrollspy="cls: uk-animation-fade; delay: 600">
 
                 </div>
@@ -603,7 +603,7 @@
 
                 </div>
                 <div class="uk-width-expand@m   uk-margin">
-                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 45.png" alt=""
                         uk-scrollspy="cls: uk-animation-fade; delay: 600">
 
                 </div>
@@ -676,7 +676,7 @@
                         <div class="uk-flex-center uk-flex uk-padding problems-img uk-first-column">
                             <img class="uk-scrollspy-inview"
                                 uk-scrollspy="cls: uk-animation-fade; delay: 500; repeat: false"
-                                src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt="">
+                                src="https://cdn.nyutonika.ru/images/pages-napr/Frame 47.png" alt="">
                         </div>
                     </div>
                 </section>
