Средняя школа английский язык 4

--- a/шаблон — направления-средняя-школа-английский-язык.html
+++ b/шаблон — направления-средняя-школа-английский-язык.html
@@ -713,6 +713,23 @@
                                     <li tabindex="-1" class="uk-active" style="order: 1;">
                                         <div class="uk-card uk-card-default ">
                                             <div class="uk-card-media-top">
+                                                <img src="https://cdn.nyutonika.ru/images/teachers/8-sr.png"
+                                                    alt="Слайдер">
+                                            </div>
+                                            <div class="uk-card-body card-teacher-content">
+                                                <div class="uk-card-badge uk-label teacher-label-color-tree">Английский
+                                                    язык
+                                                </div>
+                                                <h4 class="uk-card-title card-teacher-title">Елена Лаврова</h4>
+                                                <p class="card-teacher-experience">Стаж - 5 лет</p>
+                                                <p class="card-teacher-description">Учитель – это не профессия, учитель
+                                                    - это образ жизни</p>
+                                            </div>
+                                        </div>
+                                    </li>
+                                    <li tabindex="-1" class="uk-active" style="order: 1;">
+                                        <div class="uk-card uk-card-default ">
+                                            <div class="uk-card-media-top">
                                                 <img src="https://cdn.nyutonika.ru/images/teachers/1-sr.png"
                                                     alt="Слайдер">
                                             </div>
@@ -721,8 +738,8 @@
                                                 </div>
                                                 <h4 class="uk-card-title card-teacher-title">Сергей Еремин</h4>
                                                 <p class="card-teacher-experience">Стаж - 25 лет</p>
-                                                <p class="card-teacher-description">Учитель – это не профессия, учитель
-                                                    - это образ жизни</p>
+                                                <p class="card-teacher-description">Лучший способ узнать дорогу –
+                                                    спросить у учителя географии!</p>
                                             </div>
                                         </div>
                                     </li>
