Средняя школа химия 2

--- a/шаблон — направления-средняя-школа-химия.html
+++ b/шаблон — направления-средняя-школа-химия.html
@@ -385,7 +385,7 @@
                         поможем
                     </h4>
 
-                    <div class="">
+                    <div class="block-row-item">
                         <div>Веселые интерактивные занятия
                         </div>
                         <div>Быстрый прогресс, подробный разбор сложных тем</div>
