Страница средняя школа химия 3

--- a/шаблон — направления-средняя-школа-химия.html
+++ b/шаблон — направления-средняя-школа-химия.html
@@ -257,7 +257,7 @@
                     </div>
                 </div>
                 <div class="uk-width-expand@m uk-padding-remove">
-                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 48-2.png" alt=""
                         uk-scrollspy="cls: uk-animation-fade; delay: 600">
                 </div>
             </section>
@@ -265,11 +265,16 @@
         <div class="container">
             <section class="two-section-dop-icons uk-scrollspy-inview "
                 uk-scrollspy="cls: uk-animation-fade; delay: 600">
+
                 <div alt="" class="elevn-section-img3 icons-radius icons-style" src="">
                 </div>
                 <div alt="" class="elevn-section-img4 icons-radius icons-style" src=" ">
                 </div>
-                <div alt="" class="five-section-img4 icons-radius icons-style" src=" ">
+                <div class="nine-section-img1 icons-shadow icons-style" tabindex="0">
+                    <img alt="" class="" src="https://cdn.nyutonika.ru/icons/молекула-4.svg">
+                </div>
+                <div class="nine-section-img6 icons-block  icons-style" tabindex="0">
+                    <img alt="" class="" src="https://cdn.nyutonika.ru/icons/молекула-2.svg">
                 </div>
             </section>
             <div class="container-item">
@@ -306,6 +311,17 @@
         <div class="diagnostika-srscola problems color16 angl uk-margin-bottom uk-margin-large-top">
 
             <div class="container">
+                <section class="nine-section-dop-icons uk-scrollspy-inview "
+                    uk-scrollspy="cls: uk-animation-fade; delay: 600">
+                    <div class="nine-section-img1 icons-shadow icons-style" tabindex="0">
+                        <img alt="" class="" src="https://cdn.nyutonika.ru/icons/микроскоп.png">
+                    </div>
+                    <div class="nine-section-img5 icons-block  icons-style" tabindex="0">
+                        <img alt="" class="" src="https://cdn.nyutonika.ru/icons/молекула-5.svg">
+                    </div>
+
+
+                </section>
                 <section class="container-item uk-padding-large-top">
                     <h4 class="uk-text-center title-trend-block uk-scrollspy-inview "
                         uk-scrollspy="cls: uk-animation-slide-bottom; delay: 300">
@@ -348,7 +364,7 @@
 
                                 </ul>
                                 <div>
-                                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 49.png" alt=""
                                         uk-scrollspy="cls: uk-animation-fade; delay: 600" class="uk-scrollspy-inview ">
                                 </div>
 
@@ -372,28 +388,47 @@
                 <section class="container-item">
 
                     <p class="uk-text-center" uk-scrollspy="cls: uk-animation-slide-bottom; delay: 400">
-                        Химия - один из самых сложных школьных предметов по мнению учеников и их родителей. Огромный
+                        Химия - один из самых сложных школьных предметов по мнению учеников и их родителей. <br>
+                        Огромный
                         объем информации пытаются уместить всего в паре уроков в неделю, поэтому детям проще начать
                         заучивать материал, чем пытаться его понимать и использовать. Так и получается в итоге - теорию
-                        рассказать могут, а ответить на вопросы по теме или решить задачу - нет. В конце концов ученики
+                        рассказать могут, а ответить на вопросы по теме или решить задачу - нет. <br>
+                        В конце концов ученики
                         прибегают к списыванию, даже не пытаясь разобраться, но что же делать на контрольных и
                         экзаменах?
                     </p>
 
                     <h4 class="uk-text-center title-trend-block uk-scrollspy-inview "
-                        uk-scrollspy="cls: uk-animation-slide-bottom; delay: 300">Хотите получать пятерки по химии? Мы
+                        uk-scrollspy="cls: uk-animation-slide-bottom; delay: 300">Хотите получать пятерки по химии? <br>
+                        Мы
                         поможем
                     </h4>
 
                     <div class="block-row-item">
-                        <div>Веселые интерактивные занятия
+                        <div>
+                            <div class="icons-radius icons-style color15">
+                            </div>
+                            Веселые интерактивные занятия
                         </div>
-                        <div>Быстрый прогресс, подробный разбор сложных тем</div>
-                        <div>Подборка простых и удобных решений для любой задачи
+                        <div>
+                            <div class="icons-radius icons-style color11">
+                            </div>
+                            Быстрый прогресс, подробный разбор сложных тем
                         </div>
-                        <div>Разбор интересных олимпиадных заданий
+                        <div>
+                            <div class="icons-radius icons-style color17">
+                            </div>
+                            Подборка простых и удобных решений для любой задачи
                         </div>
-                        <div>Понятные и запоминающиеся примеры
+                        <div>
+                            <div class="icons-radius icons-style color13">
+                            </div>
+                            Разбор интересных олимпиадных заданий
+                        </div>
+                        <div>
+                            <div class="icons-radius icons-style color3">
+                            </div>
+                            Понятные и запоминающиеся примеры
                         </div>
                     </div>
                 </section>
@@ -409,20 +444,19 @@
             <div class="container">
                 <section class="nine-section-dop-icons uk-scrollspy-inview "
                     uk-scrollspy="cls: uk-animation-fade; delay: 600">
-                    <div class="nine-section-img1 icons-shadow icons-style" tabindex="0">
-                        <img alt="" class="" src="https://cdn.nyutonika.ru/icons/микроскоп.png">
+                    <div class="seven-section-img2 icons-block icons-style">
+                        <img alt="" class="" src="https://cdn.nyutonika.ru/icons/молекула-6.svg">
                     </div>
 
-                    <div alt="" class="nine-section-img3 icons-radius icons-style" src="">
-                    </div>
 
-                    <div class="nine-section-img6 icons-block icons-style">
-                        <img alt="" class="" src="https://cdn.nyutonika.ru/icons/лупа.png">
+                    <div class="nine-section-img5 icons-block icons-style">
+                        <img alt="" class="" src="https://cdn.nyutonika.ru/icons/молекула-4.svg">
                     </div>
                 </section>
                 <section class="container-item">
                     <h4 class="uk-text-center title-trend-block uk-scrollspy-inview "
-                        uk-scrollspy="cls: uk-animation-slide-bottom; delay: 300">Создаем индивидуальную программу для
+                        uk-scrollspy="cls: uk-animation-slide-bottom; delay: 300">Создаем индивидуальную программу<br>
+                        для
                         каждого
                     </h4>
                     <p class="uk-text-center" uk-scrollspy="cls: uk-animation-slide-bottom; delay: 400">
@@ -455,7 +489,7 @@
                         <div class="uk-flex-center uk-flex uk-padding problems-img uk-first-column">
                             <img class="uk-scrollspy-inview"
                                 uk-scrollspy="cls: uk-animation-fade; delay: 500; repeat: false"
-                                src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt="">
+                                src="https://cdn.nyutonika.ru/images/pages-napr/Frame 50.png" alt="">
                         </div>
                     </div>
                 </section>
