--- a/шаблон — направления-средняя-школа-химия.html
+++ b/шаблон — направления-средняя-школа-химия.html
@@ -235,7 +235,7 @@
 
         <h1 class="h1-napravlenia napravlenia_nach napravlenia_srshk"
             uk-scrollspy="cls: uk-animation-slide-bottom; delay: 300">
-            Химия 5-9 класс
+            Химия средняя школа
         </h1>
 
 
