--- a/шаблон — направления-логопедия - логопед.html
+++ b/шаблон — направления-логопедия - логопед.html
@@ -256,7 +256,7 @@
                     </div>
                 </div>
                 <div class="uk-width-expand@m uk-padding-remove">
-                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 51.png" alt=""
                         uk-scrollspy="cls: uk-animation-fade; delay: 600">
                 </div>
             </section>
@@ -265,16 +265,16 @@
             <section class="two-section-dop-icons uk-scrollspy-inview "
                 uk-scrollspy="cls: uk-animation-fade; delay: 600">
                 <div class="two-section-img1 icons-shadow icons-style" tabindex="0">
-                    <img alt="" class="" src="https://cdn.nyutonika.ru/icons/мольберт.png">
+                    <img alt="" class="" src="https://cdn.nyutonika.ru/icons/логопед2.png">
                 </div>
 
-                <div alt="" class="two-section-img3 icons-radius icons-style" src="">
+                <div alt="" class="two-section-img3 icons-radius icons-style color5" src="">
                 </div>
-                <div alt="" class="two-section-img4 icons-radius icons-style" src=" ">
+                <div alt="" class="two-section-img4 icons-radius icons-style color4 " src=" ">
                 </div>
 
                 <div class="two-section-img6 icons-shadow  icons-style">
-                    <img alt="" class="" src="https://cdn.nyutonika.ru/icons/шапка.png">
+                    <img alt="" class="" src="https://cdn.nyutonika.ru/icons/логопед.png">
                 </div>
 
             </section>
@@ -344,7 +344,7 @@
 
 
                 <div class="uk-width-expand@m">
-                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 52.png" alt=""
                         uk-scrollspy="cls: uk-animation-fade; delay: 600">
 
                 </div>
@@ -400,7 +400,7 @@
 
                 </div>
                 <div class="uk-width-expand@m   uk-margin">
-                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 53.png" alt=""
                         uk-scrollspy="cls: uk-animation-fade; delay: 600">
 
                 </div>
@@ -612,7 +612,7 @@
             <div class="container">
                 <section class="container-item">
                     <h4 class="uk-text-center title-trend-block uk-scrollspy-inview "
-                        uk-scrollspy="cls: uk-animation-slide-bottom; delay: 300">Ученики доверяют нам.
+                        uk-scrollspy="cls: uk-animation-slide-bottom; delay: 300">Ученики доверяют нам
                     </h4>
                     <p class="uk-text-center uk-scrollspy-inview "
                         uk-scrollspy="cls: uk-animation-slide-bottom; delay: 400">
