--- a/шаблон — направления-логопедия - логопед.html
+++ b/шаблон — направления-логопедия - логопед.html
@@ -416,7 +416,7 @@
 
 
                 <div class="uk-width-expand@m">
-                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 54.png" alt=""
                         uk-scrollspy="cls: uk-animation-fade; delay: 600">
 
                 </div>
@@ -503,7 +503,7 @@
                         <div class="uk-flex-center uk-flex problems-img uk-first-column uk-padding">
                             <img class="uk-scrollspy-inview"
                                 uk-scrollspy="cls: uk-animation-fade; delay: 500; repeat: false"
-                                src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt="">
+                                src="https://cdn.nyutonika.ru/images/pages-napr/Frame 55-1.png" alt="">
                         </div>
                     </div>
 
@@ -512,7 +512,7 @@
                         <div class="uk-flex-center uk-flex problems-img uk-first-column   uk-padding">
                             <img class="uk-scrollspy-inview"
                                 uk-scrollspy="cls: uk-animation-fade; delay: 500; repeat: false"
-                                src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt="">
+                                src="https://cdn.nyutonika.ru/images/pages-napr/Frame 56.png" alt="">
                         </div>
                         <div class="efficiency">
                             <p class="efficiency-p" uk-scrollspy="cls: uk-animation-slide-bottom; delay: 400">5-6 лет
@@ -594,7 +594,7 @@
                         <div class="uk-flex-center uk-flex problems-img uk-first-column uk-flex-last@m">
                             <img class="uk-scrollspy-inview"
                                 uk-scrollspy="cls: uk-animation-fade; delay: 500; repeat: false"
-                                src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt="">
+                                src="https://cdn.nyutonika.ru/images/pages-napr/Frame 57.png" alt="">
                         </div>
                     </div>
                     <h4 class="uk-text-center title-trend-block uk-scrollspy-inview k-margin-large-top"
@@ -608,7 +608,7 @@
             </div>
         </div>
 
-        <div class="diagnostika-logoped uk-margin-large-top problems color16">
+        <div class="diagnostika-logoped  problems color16">
             <div class="container">
                 <section class="container-item">
                     <h4 class="uk-text-center title-trend-block uk-scrollspy-inview "
@@ -620,16 +620,64 @@
                     </p>
                     <div class="item-circle">
                         <ul>
-                            <li></li>
-                            <li>Раскрытие лидерских способностей, возможность легко находить друзей
+                            <li><img class="uk-scrollspy-inview"
+                                    uk-scrollspy="cls: uk-animation-fade; delay: 500; repeat: false"
+                                    src="https://cdn.nyutonika.ru/images/pages-napr/Frame 109.png" alt=""> </li>
+                            <li><img class="uk-scrollspy-inview"
+                                    uk-scrollspy="cls: uk-animation-fade; delay: 500; repeat: false"
+                                    src="https://cdn.nyutonika.ru/images/pages-napr/Frame 108.svg" alt="">
+                                Раскрытие лидерских способностей, возможность легко находить друзей
                             </li>
-                            <li>Изучение иностранных языков стало намного проще!</li>
-                            <li>Повышение мотивации в учебе, отметки выросли минимум на 1 балл!
+                            <li><img class="uk-scrollspy-inview"
+                                    uk-scrollspy="cls: uk-animation-fade; delay: 500; repeat: false"
+                                    src="https://cdn.nyutonika.ru/images/pages-napr/Frame 103.svg" alt="">
+                                Изучение иностранных языков стало намного проще!</li>
+                            <li><img class="uk-scrollspy-inview"
+                                    uk-scrollspy="cls: uk-animation-fade; delay: 500; repeat: false"
+                                    src="https://cdn.nyutonika.ru/images/pages-napr/Frame 104.svg" alt="">
+                                Повышение мотивации в учебе, отметки выросли минимум на 1 балл!
                             </li>
-                            <li>Четкая и понятная речь. <br> Доступное выражение своих мыслей, слаженные темп и
+                            <li><img class="uk-scrollspy-inview"
+                                    uk-scrollspy="cls: uk-animation-fade; delay: 500; repeat: false"
+                                    src="https://cdn.nyutonika.ru/images/pages-napr/Frame 105.svg" alt="">
+                                Четкая и понятная речь. <br> Доступное выражение своих мыслей, слаженные темп и
                                 интонация
                             </li>
-                            <li>Уверенность в себе и своих возможностях</li>
+                            <li><img class="uk-scrollspy-inview"
+                                    uk-scrollspy="cls: uk-animation-fade; delay: 500; repeat: false"
+                                    src="https://cdn.nyutonika.ru/images/pages-napr/Frame 102.svg" alt="">
+                                Уверенность в себе и своих возможностях</li>
+                        </ul>
+                    </div>
+                    <div class="item-circle-mobile">
+                        <ul>
+                            <li><img class="uk-scrollspy-inview"
+                                    uk-scrollspy="cls: uk-animation-fade; delay: 500; repeat: false"
+                                    src="https://cdn.nyutonika.ru/images/pages-napr/Frame 109.png" alt=""> </li>
+                            <li><img class="uk-scrollspy-inview"
+                                    uk-scrollspy="cls: uk-animation-fade; delay: 500; repeat: false"
+                                    src="https://cdn.nyutonika.ru/images/pages-napr/Frame 108.svg" alt="">
+                                Раскрытие лидерских способностей, возможность легко находить друзей
+                            </li>
+                            <li><img class="uk-scrollspy-inview"
+                                    uk-scrollspy="cls: uk-animation-fade; delay: 500; repeat: false"
+                                    src="https://cdn.nyutonika.ru/images/pages-napr/Frame 103.svg" alt="">
+                                Изучение иностранных языков стало намного проще!</li>
+                            <li><img class="uk-scrollspy-inview"
+                                    uk-scrollspy="cls: uk-animation-fade; delay: 500; repeat: false"
+                                    src="https://cdn.nyutonika.ru/images/pages-napr/Frame 104.svg" alt="">
+                                Повышение мотивации в учебе, отметки выросли минимум на 1 балл!
+                            </li>
+                            <li><img class="uk-scrollspy-inview"
+                                    uk-scrollspy="cls: uk-animation-fade; delay: 500; repeat: false"
+                                    src="https://cdn.nyutonika.ru/images/pages-napr/Frame 105.svg" alt="">
+                                Четкая и понятная речь. <br> Доступное выражение своих мыслей, слаженные темп и
+                                интонация
+                            </li>
+                            <li><img class="uk-scrollspy-inview"
+                                    uk-scrollspy="cls: uk-animation-fade; delay: 500; repeat: false"
+                                    src="https://cdn.nyutonika.ru/images/pages-napr/Frame 102.svg" alt="">
+                                Уверенность в себе и своих возможностях</li>
                         </ul>
                     </div>
 
