--- a/шаблон — направления-дошкольникам - Логопед.html
+++ b/шаблон — направления-дошкольникам - Логопед.html
@@ -246,7 +246,7 @@
                     </div>
                 </div>
                 <div class="uk-width-expand@m uk-padding-remove">
-                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 5-1.png" alt=""
                         uk-scrollspy="cls: uk-animation-fade; delay: 600">
                 </div>
             </section>
@@ -332,11 +332,11 @@
                 uk-scrollspy="cls: uk-animation-slide-bottom; delay: 300">
                 Логопеды онлайн-школы Ньютоника - не только звонкий [р]</h3>
             <!-- 1 секция  баннер и текст-->
-            <section class="uk-flex-between one-section uk-padding uk-margin-bottom uk-grid" uk-grid>
+            <section class="uk-flex-between one-section uk-padding  uk-grid" uk-grid>
 
 
                 <div class="uk-width-expand@m uk-margin uk-first-column">
-                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 110.png" alt=""
                         uk-scrollspy="cls: uk-animation-fade; delay: 600">
 
                 </div>
@@ -358,14 +358,8 @@
 
             </section>
 
-
-        </div>
-
-
-        <div class="container">
-
             <!-- 1 секция  баннер и текст-->
-            <section class="uk-flex-between one-section uk-padding uk-margin-bottom efficiency-reverse uk-grid" uk-grid>
+            <section class="uk-flex-between one-section uk-padding  efficiency-reverse uk-grid" uk-grid>
 
                 <div class="uk-width-1-2@m uk-flex uk-flex-middle ">
 
@@ -379,22 +373,18 @@
 
                 </div>
                 <div class="uk-width-expand@m uk-margin uk-first-column">
-                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 111.png" alt=""
                         uk-scrollspy="cls: uk-animation-fade; delay: 600">
 
                 </div>
             </section>
 
-
-        </div>
-        <div class="container">
-
             <!-- 1 секция  баннер и текст-->
-            <section class="uk-flex-between one-section uk-padding uk-margin-large-bottom uk-grid" uk-grid>
+            <section class="uk-flex-between one-section uk-padding  uk-grid" uk-grid>
 
 
                 <div class="uk-width-expand@m uk-margin uk-first-column">
-                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 112.png" alt=""
                         uk-scrollspy="cls: uk-animation-fade; delay: 600">
 
                 </div>
@@ -416,13 +406,8 @@
 
             </section>
 
-
-        </div>
-        <div class="container">
-
             <!-- 1 секция  баннер и текст-->
-            <section class="uk-flex-between one-section uk-padding uk-margin-bottom  efficiency-reverse uk-grid"
-                uk-grid>
+            <section class="uk-flex-between one-section uk-padding  efficiency-reverse uk-grid" uk-grid>
 
                 <div class="uk-width-1-2@m uk-flex uk-flex-middle">
 
@@ -436,18 +421,14 @@
 
                 </div>
                 <div class="uk-width-expand@m uk-margin uk-first-column">
-                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 113-2.png" alt=""
                         uk-scrollspy="cls: uk-animation-fade; delay: 600">
 
                 </div>
             </section>
 
-
-        </div>
-        <div class="container">
-
             <!-- 1 секция  баннер и текст-->
-            <section class="uk-flex-between one-section uk-padding uk-margin-bottom uk-grid" uk-grid>
+            <section class="uk-flex-between one-section uk-padding  uk-grid" uk-grid>
 
 
                 <div class="uk-width-expand@m uk-margin uk-first-column">
@@ -474,13 +455,8 @@
 
             </section>
 
-
-        </div>
-        <div class="container">
-
             <!-- 1 секция  баннер и текст-->
-            <section class="uk-flex-between one-section uk-padding uk-margin-bottom  efficiency-reverse uk-grid"
-                uk-grid>
+            <section class="uk-flex-between one-section uk-padding  efficiency-reverse uk-grid" uk-grid>
 
                 <div class="uk-width-1-2@m uk-flex uk-flex-middle">
 
@@ -501,12 +477,8 @@
                 </div>
             </section>
 
-
-        </div>
-        <div class="container">
-
             <!-- 1 секция  баннер и текст-->
-            <section class="uk-flex-between one-section uk-padding uk-margin-bottom uk-grid" uk-grid>
+            <section class="uk-flex-between one-section uk-padding  uk-grid" uk-grid>
 
 
                 <div class="uk-width-expand@m uk-margin uk-first-column">
@@ -531,9 +503,8 @@
                 </div>
 
             </section>
-
-
         </div>
+
 
 
 
