--- a/шаблон — направления-дошкольникам - Логопед.html
+++ b/шаблон — направления-дошкольникам - Логопед.html
@@ -432,7 +432,7 @@
 
 
                 <div class="uk-width-expand@m uk-margin uk-first-column">
-                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 114.png" alt=""
                         uk-scrollspy="cls: uk-animation-fade; delay: 600">
 
                 </div>
@@ -471,7 +471,7 @@
 
                 </div>
                 <div class="uk-width-expand@m uk-margin uk-first-column">
-                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 115.png" alt=""
                         uk-scrollspy="cls: uk-animation-fade; delay: 600">
 
                 </div>
@@ -482,7 +482,7 @@
 
 
                 <div class="uk-width-expand@m uk-margin uk-first-column">
-                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 116.png" alt=""
                         uk-scrollspy="cls: uk-animation-fade; delay: 600">
 
                 </div>
@@ -538,24 +538,24 @@
 
                     <div class="item-circle">
                         <ul>
-                            <li> воображение
+                            <li> Воображение
                                 <img class="uk-scrollspy-inview uk-padding-small"
                                     uk-scrollspy="cls: uk-animation-fade; delay: 500; repeat: false"
-                                    src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt="">
+                                    src="https://cdn.nyutonika.ru/images/pages-napr/Frame 117.png" alt="">
                             </li>
                             <li class="item-circle_border">
-                                речь
+                                Речь
                             </li>
                             <li class="item-circle_border">
-                                восприятие</li>
+                                Восприятие</li>
                             <li class="item-circle_border">
-                                внимание
+                                Внимание
                             </li>
                             <li class="item-circle_border">
-                                мышление
+                                Мышление
                             </li>
                             <li class="item-circle_border">
-                                память</li>
+                                Память</li>
 
                         </ul>
                     </div>
