--- a/шаблон — направления-дошкольникам - Логопед.html
+++ b/шаблон — направления-дошкольникам - Логопед.html
@@ -561,24 +561,24 @@
                     </div>
                     <div class="item-circle-mobile">
                         <ul>
-                            <li>воображение
+                            <li>Воображение
                                 <img class="uk-scrollspy-inview "
                                     uk-scrollspy="cls: uk-animation-fade; delay: 500; repeat: false"
                                     src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt="">
                             </li>
                             <li>
-                                речь
+                                Речь
                             </li>
                             <li>
-                                восприятие</li>
+                                Восприятие</li>
                             <li>
-                                внимание
+                                Внимание
                             </li>
                             <li>
-                                мышление
+                                Мышление
                             </li>
                             <li>
-                                память</li>
+                                Память</li>
 
                         </ul>
                     </div>
